tests/invalid/lexer/invalid_character.out
tests/failing/lexer/invalid_character.ri:1:1: error: invalid character ```
    |
  1 | `
    | ^
rivetc: error: could not compile package `core`, aborting due to previous error